<resources>
    <string name="app_name">RSR Revalidatieservice</string>
    <string name="about_text">Met de hulpmiddelen van RSR blijft u mobiel. RSR is de leverancier van
        hulpmiddelen in de regio Noordoost-Nederland. Gedegen kennis en jarenlange ervaring zit in ons
        DNA verweven en leidt tot het beste advies.\n\nWilt u meer weten over onze producten en diensten, kijk dan op www.rsr.nl of bezoek onze showrooms
        in Silvolde en Nieuwleusen. We zijn iedere werkdag geopend van 8.00 tot 17.00 uur. Hier kunt
        u diverse hulpmiddelen uitproberen en rustig bekijken wat goed bij uw situatie aansluit. Samen
        met u zoeken we naar het hulpmiddel dat bij u past. RSR maakt mensen mobiel.
    </string>
    <string name="main_btn_text">RSR Pechhulp</string>
    <string name="title_activity_maps">RSR Pechhulp</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f
 \n Timestamp: %3$tr"</string>
    <string name="no_location">"No location was obtained"</string>
    <string name="marker_text">\nOnthoud deze locatie voor het telefoongesprek.</string>
    <string name="cancel">Annuleren</string>
    <string name="gps_off">GPS uitgeschakeld</string>
    <string name="gps_message">Uw GPS is uitgeschakeld. Schakel het alstublieft in om door te gaan.</string>
    <string name="activate">Aanzetten</string>
    <string name="call_button_1">Bel RSR nu</string>
    <string name="call_button_2">Bel nu</string>
    <string name="cost">Belkosten</string>
    <string name="cost_info">Voor dit nummer betaalt u uw gebruikelijke belkosten</string>
    <string name="rsr_number">tel:+319007788990</string>
    <string name="location_null">Geen locatie gevonden.</string>
    <string name="no_network_message">Uw netwerk is uitgeschakeld. Schakel het alstublieft in om door te gaan.</string>
    <string name="network_off">Netwerk is uitgeschakeld</string>
    <string name="open_wifi_settings">Open wifi-instellingen</string>
    <string name="open_data_settigns">open mobiele data-instellingen</string>
    <string name="tablet_text_1">Neem contact op met RSR Nederland</string>
    <string name="tablet_text_2">0900-7788990</string>
    <string name="tablet_text_3">9,4 cent per gesprek plus 2,8 cent per minuut, plus uw gebruikelijke belkosten.</string>
    <string name="app_name_short">RSR</string>
</resources>
